# sparrow

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile-Dev  Makefile  README.md  pyproject.toml
sparrow/: config.py  logger.py  server.py  settings.py
sparrow/cloudproviders/: decorators.py  exceptions.py  interface.py
sparrow/cloudproviders/azure/: client.py
sparrow/http/: http.py  interface.py
sparrow/locking/: factory.py
sparrow/machine/: decorators.py  enum.py  system.py
sparrow/middleware/: auth.py
sparrow/parser/: argsparse.py  exceptions.py
sparrow/receivers/: events.py  factory.py  interface.py  models.py
sparrow/receivers/gitlab/: enum.py  models.py  receiver.py  schema.py
sparrow/release_managers/: factory.py  interface.py
sparrow/release_managers/helm/: enum.py  manager.py  plugins.py
sparrow/sparrowfile/: exceptions.py  models.py
sparrow/sparrowfile/tests/: test_models.py
sparrow/sparrowfile/tests/data/: sparrowfile_azure.yaml
sparrow/telemetry/logging/: factory.py  interface.py  manager.py  standard.py
sparrow/vcs/: factory.py  interface.py  models.py
sparrow/vcs/gitlab/: client.py  endpoints.py  enum.py  models.py  schema.py
